@@ -19,6 +19,7 @@ rocket-lift-weight=Rocket capacity
 
 [sw-rates-annotation]
 boiler-input-fluid-temperature-unknown=Default to __1__ (__2__)
+boiler-input-fluid-temperature-too-high=Input fluid __1__ (__2__) must be <__3__
 generator-input-fluid-temperature-unknown=Default to __1__ (__2__)
 meta-speed-limited-by-fluid-fuel=Speed limited by fluid fuel consumption
 
